update shop page. fix layout bug.

--- a/src/app/orders/components/shop-food/shop-food.component.scss
+++ b/src/app/orders/components/shop-food/shop-food.component.scss
@@ -1,4 +1,9 @@
 @import '../../../../assets/mixin.scss';
+:host{
+    display: flex;
+    flex: 1;
+}
+
 .food_container {
   display: flex;
   flex: 1;
